2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/dirutils.c: #include <limits.h>.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/include/rtems/rtems/clock.h: #include <sys/time.h>
	* librpc/include/rpc/rpcent.h: #include <rpc/types.h>.
	* librpc/include/rpc/xdr.h: #include <rtems/bsd/sys/cdefs.h>.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1348/cpukit
	* rtems/src/ratemonperiod.c: Properly handle period statistics after
	cpu usage information is reset while a period is running.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* rtems/include/rtems/rtems/timer.h, rtems/src/rtemstimer.c,
	rtems/src/timerreset.c, rtems/src/timerserver.c,
	rtems/src/timerserverfireafter.c, rtems/src/timerserverfirewhen.c,
	score/Makefile.am, score/include/rtems/score/watchdog.h: Rework Timer
	Server to ensure that the context allows for blocking, allocating
	memory, and acquiring semaphores and mutexes.
	* score/src/watchdogadjusttochain.c: New file.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1346/cpukit
	* rtems/include/rtems/rtems/ratemon.h: Sense of rate monotonic
	statistics nanoseconds or ticks granularity conditional is backwards.

2008-12-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/ttyname.c: Correct prototype of ttyname_r() to use
	size_t for third parameter.

2008-12-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/shell/main_cp.c, libmisc/shell/main_ls.c,
	libmisc/shell/main_mv.c, libmisc/shell/main_netstats.c,
	libmisc/shell/main_rm.c, libmisc/shell/shell_script.c: Add #define
	__need_getopt_newlib to enable getopt_r() support in newlib as
	required by 4.10 toolset.

2008-11-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1341/cpukit
	* sapi/include/confdefs.h: The following macros were missing
	the _Configure_From_workspace() wrapper on their size estimate:
	  + CONFIGURE_INTERRUPT_STACK_MEMORY
	  + CONFIGURE_MEMORY_PER_TASK_FOR_CLASSIC_API